# C

./: .gitignore  .mergify.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: codeowners  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c_test.yml
algoritma/: CMakeLists.txt  insertion_sort.c
algoritma/searching/: CMakeLists.txt  linear_search.c
algoritma/sorting/: CMakeLists.txt  bubble_sort.c
hashing/: CMakeLists.txt  hash_sdbm.c  hash_xor8.c
konversi/: CMakeLists.txt  biner_ke_oktal.c
math/: CMakeLists.txt  algoritma_euclid.c  angka_armstrong.c  angka_catalan.c  deret_aritmatika.c  fibonacci.c  fungsi_mutlak.c  linear_interpolation.c  linear_regression.c  quadratic_regression.c  stats_deskriptif.c  turunan.c
project/NeuralNetwork/: CMakeLists.txt  main.c  nn.c  nn.h
